IndexedDB: Index key paths that yield invalid keys should not fail an add/put https://bugs.webkit.org/show_bug.cgi?id=86122

Reviewed by Tony Chang.

Source/WebCore:

A clause was removed from the IDB spec. Previously, on add/put, if evaluating an
index's key path yielded a value that was not a valid key, an exception would be
raised. Now, it is treated the same as if no value was yielded.

Test: storage/indexeddb/index-basics.html
Test: storage/indexeddb/index-basics-workers.html
Test: storage/indexeddb/objectstore-basics.html
Test: storage/indexeddb/objectstore-basics-workers.html

* Modules/indexeddb/IDBObjectStoreBackendImpl.cpp:
(WebCore::IDBObjectStoreBackendImpl::put): Preconditions removed
(WebCore::IDBObjectStoreBackendImpl::putInternal): Treat invalid keys the same as missing keys.

LayoutTests:

* storage/indexeddb/index-basics-expected.txt:
* storage/indexeddb/index-basics-workers-expected.txt:
* storage/indexeddb/objectstore-basics-expected.txt:
* storage/indexeddb/objectstore-basics-workers-expected.txt:
* storage/indexeddb/resources/index-basics.js: Add checks that index key paths
that evaluate to invalid keys do not fail puts/adds, just don't add index entries.
(addData3):
(addData4):
(cursor1Continue3):
(cursor1Continue4):
(cursor2Continue3):
(cursor2Continue4):
(last):
(index1Count):
(index2Count):
* storage/indexeddb/resources/objectstore-basics.js: Remove precondition checks
that would previously raise an exception if invalid keys were specified.
(addAgainFailure):
(testPreConditions.request.onsuccess):
(testPreConditions):


Canonical link: https://commits.webkit.org/104697@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117808 268f45cc-cd09-0410-ab3c-d52691b4dbfc